<resources>
    <string name="app_name">CAB</string>
    <string name="i_m_a_driver">I\'m a driver</string>
    <string name="i_m_a_customer">I\'m a customer</string>
    <string name="customer_login">Customer Login</string>
    <string name="driver_login">Driver Login</string>
    <string name="loginc">Login</string>
    <string name="passwordc">Password</string>
    <string name="emailc">Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registerc">Register</string>
    <string name="don_t_have_an_Account">Don\'t have an Account?</string>
    <string name="register">Register</string>
    <string name="im_a_driver">I\'m a Driver</string>
    <string name="im_a_customer">I\'m a Customer</string>
    <string name="title_activity_drivers_map">Map</string>
    <string name="logout">logout</string>
    <string name="settings">Settings</string>
    <string name="title_activity_customers_map">Map</string>
    <string name="button2">Button</string>

    <string name="Logoutc">Logout</string>
    <string name="Settingsc">Settings</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="button3">Button</string>
    <string name="Logout">Logout</string>
    <string name="Settings">Settings</string>
    <string name="Call_a_service">Call a Service</string>
    <string name="todo" />
</resources>
