<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:background="@drawable/q"
    tools:context=".DriverLoginActivity">

    <TextView
        android:id="@+id/driver_status"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="413dp"
        android:text="@string/driver_login"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHighlight="@android:color/holo_green_light"
        android:textSize="21sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="334dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/password_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="94dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="250dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/driver_register_link"
        android:layout_width="202dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="109dp"
        android:layout_marginTop="664dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="24dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/driver_register_btn"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="556dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="127dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/driver_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="541dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="150dp"
        android:text="@string/login" />

</RelativeLayout>