<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".CustomersMapActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="48dp" />

    <Button
        android:id="@+id/customer_logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="267dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="700dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Logout"
        android:textSize="15sp" />

    <Button
        android:id="@+id/customer_settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="702dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Settings"
        android:textSize="15sp" />

    <Button
        android:id="@+id/customer_call_service_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="679dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-2dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Call_a_service"
        android:textSize="18sp" />

</RelativeLayout>
